// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Dropdown-root"
    >
      <div
        class="Dropdown-anchor"
      >
        Open Dropdown 
        <span
          class="DropdownArrow-root DropdownArrow-medium"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render menu 1`] = `
<div>
  <div
    class="Picasso-root"
    style="overflow: hidden;"
  >
    <div
      aria-hidden="true"
      class="Dropdown-root"
    >
      <div
        class="Dropdown-anchor"
      >
        Open Dropdown 
        <span
          class="DropdownArrow-root DropdownArrow-medium"
        />
      </div>
    </div>
    <div
      role="presentation"
      style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
    >
      <div
        aria-hidden="true"
        style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: transparent;"
      />
      <div
        data-test="sentinelStart"
        tabindex="0"
      />
      <div
        class="MuiPaper-root MuiPaper-elevation2 MuiPopover-paper Dropdown-paper"
        role="document"
        style="opacity: 1; transform: scale(1, 1); transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; top: 16px; left: 16px; transform-origin: -16px -16px;"
        tabindex="-1"
      >
        <div
          class="Dropdown-content"
        >
          <ul
            class="MuiList-root"
            role="menu"
            tabindex="-1"
          >
            <li
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="MenuItem-stringContent"
              >
                Item1
              </span>
            </li>
            <li
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="MenuItem-stringContent"
              >
                Item2
              </span>
            </li>
            <li
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="MenuItem-stringContent"
              >
                Item3
              </span>
            </li>
          </ul>
        </div>
      </div>
      <div
        data-test="sentinelEnd"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Dropdown should render menu with focus 1`] = `
<div>
  <div
    class="Picasso-root"
    style="overflow: hidden;"
  >
    <div
      aria-hidden="true"
      class="Dropdown-root"
    >
      <div
        class="Dropdown-anchor"
      >
        Open Dropdown 
        <span
          class="DropdownArrow-root DropdownArrow-medium"
        />
      </div>
    </div>
    <div
      role="presentation"
      style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
    >
      <div
        aria-hidden="true"
        style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: transparent;"
      />
      <div
        data-test="sentinelStart"
        tabindex="0"
      />
      <div
        class="MuiPaper-root MuiPaper-elevation2 MuiPopover-paper Dropdown-paper"
        role="document"
        style="opacity: 1; transform: scale(1, 1); transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; top: 16px; left: 16px; transform-origin: -16px -16px;"
        tabindex="-1"
      >
        <div
          class="Dropdown-content"
        >
          <ul
            class="MuiList-root"
            role="menu"
            tabindex="-1"
          >
            <li
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-focusVisible Mui-focusVisible"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="MenuItem-stringContent"
              >
                Item1
              </span>
            </li>
            <li
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="MenuItem-stringContent"
              >
                Item2
              </span>
            </li>
            <li
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="MenuItem-stringContent"
              >
                Item3
              </span>
            </li>
          </ul>
        </div>
      </div>
      <div
        data-test="sentinelEnd"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;
